--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Bee's Knees</title>
   <!-- CSS style sheets -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="public/css/styles.css">
 
   <!-- Bootstrap Scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -19,7 +19,7 @@
 
   <!-- Fixed top content(img,logo,navigation) -->
   <div class="top">
-    <img src="/images/logo1.png" alt="logo">
+    <img src="public/images/logo1.png" alt="logo">
     <h1>THE BEE'S KNEES</h1>
     <p>PUBLIC HOUSE</p>
     <nav class="navbar navbar-expand-lg navbar-dark ">
